# prenfe_scraper

./: .gitignore  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  README.md  SYSTEMD_SETUP.md  analyze_train_lines.py  pyproject.toml  requirements.txt  scraper.py  terraform.tfvars  variables.tf
docs/: cloud-run-deployment.md  deployment-status.md
infra/systemd/: SETUP.md  prenfe-scraper.service
infra/terraform/: main.tf
tests/: test_scraper.py
